@@ -1,12 +1,14 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 
 package org.elasticsearch.xpack.async;
 
 import org.elasticsearch.client.Client;
+import org.elasticsearch.client.OriginSettingClient;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.service.ClusterService;
@@ -22,14 +24,11 @@ import org.elasticsearch.repositories.RepositoriesService;
 import org.elasticsearch.script.ScriptService;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.watcher.ResourceWatcherService;
-import org.elasticsearch.xpack.core.XPackPlugin;
 import org.elasticsearch.xpack.core.async.AsyncTaskIndexService;
 import org.elasticsearch.xpack.core.async.AsyncTaskMaintenanceService;
-import org.elasticsearch.xpack.core.search.action.AsyncSearchResponse;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 
@@ -45,7 +44,17 @@ public class AsyncResultsIndexPlugin extends Plugin implements SystemIndexPlugin
 
     @Override
     public Collection<SystemIndexDescriptor> getSystemIndexDescriptors(Settings settings) {
-        return Collections.singletonList(new SystemIndexDescriptor(XPackPlugin.ASYNC_RESULTS_INDEX, this.getClass().getSimpleName()));
+        return List.of(AsyncTaskIndexService.getSystemIndexDescriptor());
+    }
+
+    @Override
+    public String getFeatureName() {
+        return "async_search";
+    }
+
+    @Override
+    public String getFeatureDescription() {
+        return "Manages results of async searches";
     }
 
     @Override
@@ -63,23 +72,14 @@ public class AsyncResultsIndexPlugin extends Plugin implements SystemIndexPlugin
         Supplier<RepositoriesService> repositoriesServiceSupplier
     ) {
         List<Object> components = new ArrayList<>();
-        if (DiscoveryNode.isDataNode(environment.settings())) {
+        if (DiscoveryNode.canContainData(environment.settings())) {
             // only data nodes should be eligible to run the maintenance service.
-            AsyncTaskIndexService<AsyncSearchResponse> indexService = new AsyncTaskIndexService<>(
-                XPackPlugin.ASYNC_RESULTS_INDEX,
-                clusterService,
-                threadPool.getThreadContext(),
-                client,
-                ASYNC_SEARCH_ORIGIN,
-                AsyncSearchResponse::new,
-                namedWriteableRegistry
-            );
             AsyncTaskMaintenanceService maintenanceService = new AsyncTaskMaintenanceService(
                 clusterService,
                 nodeEnvironment.nodeId(),
                 settings,
                 threadPool,
-                indexService
+                new OriginSettingClient(client, ASYNC_SEARCH_ORIGIN)
             );
             components.add(maintenanceService);
         }
